<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NewsDesk</string>
    <string name="head_app">Chartered Accountants Ireland</string>
    <string name="app_id">363664483735184</string>

    <string name="news_string">News</string>
    <string name="audit_string">Audit &amp; Accounting</string>
    <string name="business_string">Business</string>
    <string name="governance_string">Governance</string>
    <string name="insolvency_string">Insolvency</string>
    <string name="practice_string">Practice</string>
    <string name="tax_string">Tax</string>
    <string name="favorites_string">Favorites</string>
    <string name="saved_searches_string">Saved Searches</string>
    <string name="podcasts_string">Podcasts</string>
    <string name="jobs_string">Jobs</string>
    <string name="contact_string">Contact</string>
    <string name="settings_string">Settings</string>
    <string name="settings_legal">Legal</string>
    <string name="settings_rate">Rate this App</string>
    <string name="settings_feedback">Send Us Feedback</string>
    <string name="settings_appBy">App By Lightbox.ie</string>
    <string name="legalTitle">Legal</string>
    <string name="podcast_ZeroTime">00:00</string>
    <string name="contacts_Title">Contact</string>
    <string name="contacts_textMap">Map</string>
    <string name="contacts_textCall">Call</string>
    <string name="contacts_IrelandTitle">Ireland</string>
    <string name="contacts_IrelandAddr1line">Chartered Accountants House,</string>
    <string name="contacts_IrelandAddr2line">47 Pearse St,</string>
    <string name="contacts_IrelandAddr3line">Dublin 2,</string>
    <string name="contacts_IrelandAddr4line">Ireland</string>
    <string name="contacts_NITitle">Northern Ireland</string>
    <string name="contacts_NIAddr1line">Chartered Accountants House,</string>
    <string name="contacts_NIAddr2line">32-38 Linenhall Street,</string>
    <string name="contacts_NIAddr3line">Belfast,</string>
    <string name="contacts_NIAddr4line">Country Antrim BT2 8BG,</string>
    <string name="contacts_NIAddr5line">Northen Ireland</string>
    <string name="SharePanelConSetTitle">Connect With Us</string>

    <string name="share_panel_bottom_article_text">Share this article</string>
    <string name="share_panel_bottom_podcast_text">Share this podcast</string>
    <string name="share_panel_bottom_job_text">Share this job</string>

    <string name="enter_search_query">Enter Query</string>
    <string name="save_this_search_button">Save this Search</string>
    <string name="saved_search_button">Saved</string>

</resources>
